# flight-track-viewer-python

./: .gitignore  CHANGELOG.md  INSTALLATION_GUIDE.md  LICENSE  OPTIONAL_DEPENDENCIES_GUIDE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  Quick_Start_Guide.md  README.md  SETUP.md  flight_track_viewer.py  index.html  main.js  package-lock.json  package.json  pyproject.toml  renderer.js  setup_core.bat  setup_with_ui.bat  styles.css
backend/: main.py  requirements.txt  run.py
backend/src/: data_processor.py  flight_utils.py  main.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  INSTALLATION.md  PROJECT_STRUCTURE.md  QUICKSTART.md  SETUP.md  USER_GUIDE.md
examples/: example_usage.py  sample_flight.csv  test_NY_BOS.csv
frontend/: index.html
frontend/src/css/: styles.css
frontend/src/js/: animation-controller.js  app.js  chart-manager.js  map-manager.js
scripts/: run_ui.bat  run_ui.sh  setup_core.sh  setup_with_ui.bat  setup_with_ui.sh
src/: README.md
src/flight_track_viewer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/ftv/: __init__.py  __main__.py  config.py  run.py  ui.py
src/ftv/analysis/: __init__.py  compute_geo_limits.py  compute_metrics.py  detect_takeoff_landing.py  haversine_nm.py  smart_geo_limits.py
src/ftv/data/: __init__.py  apply_callsign_filter.py  build_frame_idx.py  find_col.py  parse_and_extract.py  parse_position.py  parse_time.py  read_flight_csv.py  sort_and_clean.py
src/ftv/io/: __init__.py  save_figures.py  save_playback_video.py  select_csv_file.py
src/ftv/plotting/: __init__.py  animate_playback.py  plot_distance.py  plot_map.py  plot_time_series.py
tests/: test_ui.py
(+10 files in other folders)
