[project]
name = "flight-track-viewer"
version = "0.1.0"
description = "Visualize and analyze flight tracks from CSV data."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

# Core dependencies (required for basic functionality)
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "imageio>=2.34",
    "imageio-ffmpeg>=0.5",
    "contextily>=1.6.0",
]

# Optional dependencies for different use cases
[project.optional-dependencies]
# GUI interface
ui = [
    "PyQt6>=6.6.0",
]

# Development tools
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
]

# Install everything
all = [
    "PyQt6>=6.6.0",
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
flight-track-viewer = "ftv:launch_ui"
ftv-gui = "ftv:launch_ui"